# spellout

./: .clippy.toml  .editorconfig  .prettierignore  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  rustfmt.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/cue/: auto-tag-releases.cue  bump-version.cue  ci_tool.cue  draft-release.cue  github-actions.cue  github-pages.cue  labeler.cue  preload-caches.cue  publish-crate.cue  rust.cue  scheduled.cue  shared-steps.cue  wordsmith.cue  workflows.cue
.github/cue/cue.mod/: module.cue
.github/workflows/: README.md  auto-draft-release.yml  auto-label-pull-request.yml  auto-publish-crate.yml  auto-tag-releases.yml  bump-version.yml  deploy-github-pages.yml  draft-release.yml  github-actions.yml  github-pages.yml  label-pull-request.yml  labeler.yml  on-pull-request.yml  on-push-to-main.yml  on-schedule-weekly.yml  preload-caches.yml  publish-crate.yml  rust.yml  scheduled.yml  wordsmith.yml
crates/mybin/: Cargo.toml  README.md
crates/mybin/src/: main.rs
crates/mylib/: Cargo.toml  README.md
crates/mylib/src/: lib.rs
crates/mylib/tests/integration/: main.rs
crates/spellabet/: CHANGELOG.md  Cargo.toml  README.md
crates/spellabet/src/: code_words.rs  lib.rs
crates/spellabet/tests/integration/: main.rs
crates/spellout/: Cargo.toml  README.md  build.rs
crates/spellout/src/: cli.rs  main.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  coverage.rs  dev.rs  dist.rs  fixup.rs  main.rs  utils.rs
