[workspace]
members = ["crates/*", "xtask/"]

[workspace.package]
version = "0.2.0"
authors = ["Aaron Bull Schaefer <aaron@elasticdog.com>"]
edition = "2021"
rust-version = "1.70"
description = "Convert characters into spelling alphabet code words"
documentation = "https://github.com/EarthmanMuons/spellout/"
readme = "README.md"
homepage = "https://github.com/EarthmanMuons/spellout/"
repository = "https://github.com/EarthmanMuons/spellout/"
license = "MIT OR Apache-2.0"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

# https://github.com/crate-ci/cargo-release/
[workspace.metadata.release]
allow-branch = ["main"]
tag = false
tag-message = "Release {{crate_name}} v{{version}}"
