[workspace]
members = ["crates/*", "xtask/"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.91"
description = "Convert characters into spelling alphabet code words"
documentation = "https://github.com/EarthmanMuons/spellout/"
readme = "README.md"
homepage = "https://github.com/EarthmanMuons/spellout/"
repository = "https://github.com/EarthmanMuons/spellout/"
license = "MIT OR Apache-2.0"

# https://github.com/crate-ci/cargo-release/
[workspace.metadata.release]
allow-branch = ["main"]
tag = false
tag-message = "Release {{crate_name}} v{{version}}"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
