[package]
name = "xtask"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

# https://github.com/crate-ci/cargo-release/
[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.96"
is_ci = "1.2.0"
lexopt = "0.3.0"
nanoserde = "0.1.37"
rustc_version = "0.4.1"
which = "7.0.2"
xshell = "0.2.7"
