[package]
name = "xtask"
edition = "2024"
rust-version = "1.91"
license = "0BSD"
publish = false

# https://github.com/crate-ci/cargo-release/
[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.100"
is_ci = "1.2.0"
lexopt = "0.3.1"
nanoserde = "0.2.1"
rustc_version = "0.4.1"
which = "8.0.0"
xshell = "0.2.7"
