[package]
name = "spellabet"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "My library description."
documentation = "https://earthmanmuons.github.io/spellout/spellabet/index.html"
readme.workspace = true
homepage = "https://github.com/EarthmanMuons/spellout/tree/main/crates/spellabet"
repository = "https://github.com/EarthmanMuons/spellout/tree/main/crates/spellabet"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"

[dev-dependencies]
insta = "1.29.0"
