[package]
name = "spellabet"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "My library description."
documentation = "https://earthmanmuons.github.io/spellout/spellabet/index.html"
readme = "README.md"
homepage = "https://github.com/EarthmanMuons/spellout/tree/main/crates/spellabet"
repository = "https://github.com/EarthmanMuons/spellout/tree/main/crates/spellabet"
license.workspace = true
keywords = ["formatting", "humanize", "text"]
categories = ["text-processing", "value-formatting"]

# https://github.com/crate-ci/cargo-release/
[package.metadata.release]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- release-date -->", replace = "- {{date}}" },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] <!-- release-date -->", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/EarthmanMuons/spellout/compare/{{tag_name}}...HEAD", exactly = 1 },
  { file = "README.md", search = "spellabet = .*", replace = "{{crate_name}} = \"{{version}}\"" },
]

[dependencies]
convert_case = "0.6.0"

[dev-dependencies]
insta = "1.29.0"
