[package]
name = "spellout"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cli", "command-line", "formatting", "humanize", "text"]
categories = ["command-line-utilities", "text-processing", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "env", "wrap_help"] }
is-terminal = "0.4.7"
spellabet = { path = "../spellabet" }
