[package]
name = "spellout"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cli", "command-line", "formatting", "humanize", "text"]
categories = ["command-line-utilities", "text-processing", "value-formatting"]
publish = false

# https://github.com/crate-ci/cargo-release/
[package.metadata.release]
pre-release-replacements = [
  { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
  { file = "../../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "../../CHANGELOG.md", search = "<!-- release-date -->", replace = "- {{date}}" },
  { file = "../../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] <!-- release-date -->", exactly = 1 },
  { file = "../../CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/EarthmanMuons/spellout/compare/{{tag_name}}...HEAD", exactly = 1 },
]
tag = true
tag-prefix = ""

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
spellabet = { path = "../spellabet" }
